fix timeline spacing

--- a/client/src/components/alumni/alumni.css
+++ b/client/src/components/alumni/alumni.css
@@ -1,3 +1,7 @@
 .icon {
   box-shadow: none;
 }
+
+.date {
+  padding: 0 !important;
+}
